src/test/ui/unresolved/unresolved-import-recovery.stderr
error[E0432]: unresolved import `unresolved`
  --> $DIR/unresolved-import-recovery.rs:14:13
   |
LL |     pub use unresolved; //~ ERROR unresolved import `unresolved`
   |             ^^^^^^^^^^ no `unresolved` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
